src/test/deca/context/valid/literal-this.deca
// Description:
//    literal this
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    this;
}